# SnadStack

./: .gitignore  Cargo.toml  README.md  build.rs  nnn
assets/: cell-definitions.csv
benches/: general_bench.rs
src/: api.rs  cells.rs  input.rs  lib.rs  logic.rs  main.rs  shapes.rs  world.rs
src/gui/: input.rs  run.rs
src/simulate/: api.rs  cells.rs  definitions.rs  logic.rs  mod.rs  place.rs  sharing.rs  timings.rs  world.rs
web/: index.html  run.sh
