[package]
name = "snad_stack"
version = "0.1.0"
edition = "2021"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.13"
winit = "0.28"
log = "0.4"
fastrand = "1.8.0"
bresenham = "0.1.1"

[dev-dependencies]
criterion = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2"

[profile.optimized]
inherits = "release"
lto = true
strip = true
panic = "abort"
opt-level = 3

[profile.web-release]
inherits = "optimized"
# https://github.com/rust-lang/rust/issues/93294
strip = false

[profile.bench]
inherits = "optimized"

[[bench]]
name = "general_bench"
harness = false
